[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pygrocy2"
version = "2.7.1"
readme = "README.md"
authors = [
    { name = "George Green", email = "iamkarlson@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
    "requests",
    "deprecation~=2.1.0",
    "pydantic",
    "tzdata",
    "tzlocal~=5.2"
]
license =  "MIT"

[project.urls]
Homepage = "https://github.com/iamkarlson/pygrocy2"
[dependency-groups]
dev = [
    "responses~=0.21.0",
    "pre-commit",
    "isort",
    "pytest",
    "pytest-cov",
    "vcrpy",
    "pytest-recording",
    "pytest-mock",
    "urllib3==2.2.3",
]
docs = [
    "mkdocs-material",
    "mkdocstrings[python]",
    "mkdocs-jupyter",
]

[tool.setuptools.packages.find]
include = ["pygrocy2*"]

[tool.uv]
package = true
publish-url = "https://upload.pypi.org/legacy/"

[tool.ruff]
extend-exclude = ["test/cassettes"]

[tool.ruff.format]
exclude = ["test/cassettes"]
